--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "reaktor-project",
   "version": "1.0.0",
-  "description": "project for reaktor",
+  "description": "node app ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "author": "Arsalan Shakil",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "request": "^2.88.2"
-  }
+  "bugs": {
+    "url": ""
+  },
+  "homepage": ""
 }
